--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -54,44 +54,9 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: 127.0.0.1:9115  # The blackbox exporter's real hostname:port.
-
-  - job_name: 'beaker_abort_rate'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8005']
-
-  - job_name: 'beaker_availability'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8000']
-
-  - job_name: 'beaker_average_queue_time'
-    scrape_timeout: 3m
-    metrics_path: /metrics
-    static_configs:
-    - targets: ['localhost:8001']
-
-  - job_name: 'beaker_broken_machines'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8002']
-
-  - job_name: 'beaker_command_status'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8003']
-
-  - job_name: 'beaker_active_users'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8004']
-
-  - job_name: 'beaker_lc_load'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8006']
-
-  - job_name: 'beaker_installation_time'
-    metrics_path: /
-    static_configs:
-    - targets: ['localhost:8007']
+        
+   # endpoint for all beaker data from prometheus-sql
+   - job_name: 'beaker_data'
+     static_configs:
+     - targets: ['localhost:8080']
+  
